<resources>
    <string name="app_name">my-weibo</string>
    <string name="tabbar_home">微博</string>
    <string name="tabbar_message">消息</string>
    <string name="tabbar_discover">发现</string>
    <string name="tabbar_profile">我</string>
    <string name="navigation_radar">雷达</string>
    <string name="navigation_scan">扫一扫</string>
    <string name="navigation_calltaxi">打车</string>
    <string name="navigation_findgroup">发现群</string>
    <string name="navigation_message">消息</string>
    <string name="navigation_newchat">发起聊天</string>
    <string name="navigation_privatechat">私密聊天</string>
    <string name="navigation_setting">设置</string>
    <string name="navigation_addfriend">添加好友</string>
    <string name="navigation_profile">我</string>
    <string name="setting_account_manage">账号管理</string>
    <string name="setting_weibo_hot">微博热点</string>
    <string name="setting_account_security">账号与安全</string>
    <string name="setting_message">消息设置</string>
    <string name="setting_shield">屏蔽设置</string>
    <string name="setting_privacy">隐私设置</string>
    <string name="setting_common">通用设置</string>
    <string name="setting_sevice">客服中心</string>
    <string name="setting_about">关于微博</string>
    <string name="setting_clean_cache">清除缓存</string>
    <string name="setting_quit">退出微博</string>
    <string name="add_compose_idea">文字</string>
    <string name="add_compose_capture">拍摄</string>
    <string name="add_compose_picture">相册</string>
    <string name="add_compose_live">直播</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="visitor_home_hint">关注一些人，看看有什么惊喜</string>
    <string name="go_attention">去关注</string>
    <string name="visitor_message_hint">登陆后，别人评论你的微博，给你发消息，都会在这里收到通知</string>
    <string name="attention">关注</string>
    <string name="attention_hint">快看看大家都在关注谁</string>
    <string name="visitor_profile_hint">登陆后，你的微博、相册、个人资料会显示在这里，展示给他人</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">登陆失败</string>
    <string name="profile_membership_nomal">普通用户</string>
    <string name="profile_membership_vip">VIP</string>
    <string name="weibo">微博</string>
    <string name="fans">粉丝</string>
    <string name="profile_description_null">简介：暂无介绍</string>
    <string name="new_friend">新的好友</string>
    <string name="my_praise">我的赞</string>
    <string name="my_photo">我的相册</string>
    <string name="weibo_wallet">微博钱包</string>
    <string name="weibo_sport">微博运动</string>
    <string name="avoid_flow">免流量</string>
    <string name="from">来自</string>
    <string name="save_img">保存图片</string>
    <string name="trans_weibo">转发微博</string>
    <string name="praise">赞</string>
    <string name="cancel">取消</string>
    <string name="weibo_body">微博正文</string>
    <string name="sure_clean_cache">确定清除缓存么？</string>
    <string name="clean_cache_already">缓存已清除</string>
    <string name="data_null_click_refresh">暂无数据，点击重试</string>
    <string name="my_friends">我的好友</string>
</resources>
