<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_navigation"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorBgTabbar"
        android:elevation="3dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <TextView
            android:id="@+id/tv_navigation_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/navigation_profile"
            android:textColor="@color/colorTextNavigation"
            android:textSize="@dimen/navigation_text_size"/>

        <TextView
            android:id="@+id/tv_navigation_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:text="@string/navigation_setting"
            android:textColor="@drawable/selector_navigationbar_text"
            android:textSize="@dimen/navigation_text_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/colorBgCommonHighlight">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerInParent="true"
            android:src="@drawable/login_profile_default"
            app:civ_border_color="#88ffffff"
            app:civ_border_width="4dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/selector_common_item"
        android:clickable="true">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/attention"
            android:textColor="@color/colorTextSettingItem"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv1"
            android:text="@string/attention_hint"
            android:textColor="@color/colorTextVisitor"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/common_icon_arrow"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="115dp"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/visitor_profile_hint"
        android:textColor="@color/colorTextVisitor"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_visitor_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/selector_common_btn"
            android:gravity="center"
            android:minHeight="40dp"
            android:text="@string/register"
            android:textColor="@color/colorTextBtnHighlight"
            android:textSize="@dimen/common_btn_text_size"/>

        <Button
            android:id="@+id/btn_visitor_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/selector_common_btn"
            android:gravity="center"
            android:minHeight="40dp"
            android:text="@string/login"
            android:textColor="@color/colorTextBtn"
            android:textSize="@dimen/common_btn_text_size"/>
    </LinearLayout>

</LinearLayout>