<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/popover_background_right"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/popover_icon_radar"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/navigation_radar"
        android:textColor="@color/colorTextRadar"
        android:textSize="@dimen/radar_text_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorLineRadar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/popover_icon_qrcode"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/navigation_scan"
        android:textColor="@color/colorTextRadar"
        android:textSize="@dimen/radar_text_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorLineRadar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/popover_icon_didi"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/navigation_calltaxi"
        android:textColor="@color/colorTextRadar"
        android:textSize="@dimen/radar_text_size"/>

</LinearLayout>