<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_navigation"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorBgTabbar"
        android:elevation="3dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <TextView
            android:id="@+id/tv_navigation_addfriend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:text="@string/navigation_addfriend"
            android:textColor="@drawable/selector_navigationbar_text"
            android:textSize="@dimen/navigation_text_size" />

        <TextView
            android:id="@+id/tv_navigation_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/navigation_profile"
            android:textColor="@color/colorTextNavigation"
            android:textSize="@dimen/navigation_text_size" />

        <TextView
            android:id="@+id/tv_navigation_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:text="@string/navigation_setting"
            android:textColor="@drawable/selector_navigationbar_text"
            android:textSize="@dimen/navigation_text_size" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="profile fragment" />

</LinearLayout>