<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/top_bar"/>

    <RelativeLayout
        android:id="@+id/layout_setting_account_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_common_item"
        android:clickable="true"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_account_manage"
            android:textColor="@color/colorTextSettingItem"
            android:textSize="@dimen/setting_item_text_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/common_icon_arrow"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorLineCommon"/>

    <RelativeLayout
        android:id="@+id/layout_setting_account_security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_common_item"
        android:clickable="true"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_account_security"
            android:textColor="@color/colorTextSettingItem"
            android:textSize="@dimen/setting_item_text_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/common_icon_arrow"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_setting_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_common_item"
        android:clickable="true"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_message"
            android:textColor="@color/colorTextSettingItem"
            android:textSize="@dimen/setting_item_text_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/common_icon_arrow"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorLineCommon"/>

    <RelativeLayout
        android:id="@+id/layout_setting_shield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_common_item"
        android:clickable="true"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_shield"
            android:textColor="@color/colorTextSettingItem"
            android:textSize="@dimen/setting_item_text_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/common_icon_arrow"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorLineCommon"/>

    <RelativeLayout
        android:id="@+id/layout_setting_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_common_item"
        android:clickable="true"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_privacy"
            android:textColor="@color/colorTextSettingItem"
            android:textSize="@dimen/setting_item_text_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/common_icon_arrow"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorLineCommon"/>

    <RelativeLayout
        android:id="@+id/layout_setting_common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_common_item"
        android:clickable="true"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_common"
            android:textColor="@color/colorTextSettingItem"
            android:textSize="@dimen/setting_item_text_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/common_icon_arrow"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_setting_sevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_common_item"
        android:clickable="true"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_sevice"
            android:textColor="@color/colorTextSettingItem"
            android:textSize="@dimen/setting_item_text_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/common_icon_arrow"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorLineCommon"/>

    <RelativeLayout
        android:id="@+id/layout_setting_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_common_item"
        android:clickable="true"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_about"
            android:textColor="@color/colorTextSettingItem"
            android:textSize="@dimen/setting_item_text_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/common_icon_arrow"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_setting_clean_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_common_item"
        android:clickable="true"
        android:minHeight="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_clean_cache"
            android:textColor="@color/colorTextSettingItem"
            android:textSize="@dimen/setting_item_text_size"/>

        <ImageView
            android:id="@+id/iv_arrow_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/common_icon_arrow"/>

        <TextView
            android:id="@+id/tv_setting_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/iv_arrow_cache"
            android:textColor="@color/colorTextItemSecondary"
            android:textSize="@dimen/setting_item_text_size"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_setting_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_common_item"
        android:clickable="true"
        android:minHeight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_quit"
            android:textColor="@color/colorTextQuit"
            android:textSize="@dimen/setting_item_text_size"/>

    </RelativeLayout>

</LinearLayout>